<resources>
    <string name="app_name">NewsX</string>
    <string name="title_activity_news_main">NewsMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="highlights">Highlights</string>
    <string name="favourites">Favourites</string>
    <string name="categories">Category</string>
    <string name="share">Share</string>
    <string name="browser">Browser</string>
    <string name="widget">Widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_news_category">NewsCategory</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <string name="newsX">NewsX</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="gis_2018">GIS 2018</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_here">Reset here.</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="welcome">Welcome</string>

    <string name="main_notification_channel_name">Primary</string>

    <string name="charging_reminder_notification_title">Continue Reading News</string>
    <string name="charging_reminder_notification_body">Latest news are here Dont miss out an opportunity</string>

    <string name="logo_image">Logo Image</string>
    <string name="already_registered">Already Registered?</string>
    <string name="forgot_password_firebase">Forgot Password?</string>
    <string name="register_firebase">Register?</string>
    <string name="news_title">News Title</string>
    <string name="_4th_may_18">4th may 18</string>
    <string name="content">Content</string>
    <string name="toast_enter_email_address">Enter email address!</string>
    <string name="toast_enter_password">Enter password!</string>
    <string name="toast_password_short">Password too short, enter minimum 6 characters!</string>
    <string name="toast_create_user">createUserWithEmail:onComplete:</string>
    <string name="toast_auth_failed">Authentication failed.</string>
    <string name="business">business</string>
    <string name="general">general</string>
    <string name="entertainment">entertainment</string>
    <string name="sports">sports</string>
    <string name="science">science</string>
    <string name="health">health</string>
    <string name="technology">technology</string>
    <string name="BusinessTitle">Business</string>
    <string name="GeneralTitle">General</string>
    <string name="EntertainementTitle">Entertainment</string>
    <string name="SportsTitle">Sports</string>
    <string name="ScienceTitle">Science</string>
    <string name="HealthTitle">Health</string>
    <string name="TechnologyTitle">Technology</string>
    <string name="plz_check_your_internetConnection">Plz Check your Internet connection</string>
    <string name="widget_added_to_homescreen">Widget Added to Home Screen</string>
    <string name="something_went_wrong_in_server">Something Went Wrong in the Server</string>
    <string name="no_internet_connection">NO internet connection</string>
    <string name="newsXlogo">NewsX</string>
    <string name="loginbutton">Login</string>
    <string name="registerButton">Register</string>
    <string name="nameDetail">Name</string>
    <string name="newsDescription">description</string>
    <string name="detail_web_view">Detail View</string>
    <string name="no_news_added">No News Added</string>
    <string name="list_item_time">time</string>
    <string name="TitleWidget">Title</string>
    <string name="decriptionWidget">Description</string>
    <string name="nameWidget">Name</string>
    <string name="keywidgetTitle">title</string>
    <string name="keywidgetName">name</string>
    <string name="keywidgetDescription">description</string>
    <string name="widgetUpdatedSuccesfully">Widget has been updated!</string>
    <string name="No_Thanks">No, thanks.</string>
    <string name="data_not_loaded">Data not loaded</string>
    <string name="data_not_found">Data not loaded</string>
    <string name="HeadLines">HeadLines</string>
    <string name="Categories">Categories</string>
    <string name="category_name">category_name</string>
    <string name="Creating_new_database">Creating new Database</string>
    <string name="Getting_database_instance">Getting the database instance</string>
    <string name="Refreshed_token">Refreshed token:</string>
    <string name="From">From:</string>
    <string name="category">category</string>
    <string name="GeneralCategory">General</string>
    <string name="entertainmentCategory">Entertainment</string>
    <string name="businessCategory">Business</string>
    <string name="healthCategory">Health</string>
    <string name="scienceCategory">Science</string>
    <string name="sportsCategory">Sports</string>
    <string name="technologyCategory">Technology</string>
    <string name="generalNewsCategory">general</string>
    <string name="entertainmentNewsCategory">entertainment</string>
    <string name="businessNewsCategory">business</string>
    <string name="healthNewsCategory">health</string>
    <string name="scienceNewsCategory">science</string>
    <string name="sportsNewsCategory">sports</string>
    <string name="technologyNewsCategory">technology</string>
    <string name="removedFromFav">removed from Favourites</string>
    <string name="addedToFab">added to Favourites</string>
    <string name="titleDataBase">title</string>
    <string name="nameAdapter">name</string>
    <string name="titleAdapter">title</string>
    <string name="urlAdapter">url</string>
    <string name="descriptionAdapter">description</string>
    <string name="publishedAtAdapter">publishedAt</string>
    <string name="urlImageAdapter">url_image</string>
    <string name="contentAdapter">content</string>
    <string name="titleDetail">title</string>
    <string name="newNameDetail">name</string>
    <string name="publishedAtDetail">publishedAt</string>
    <string name="newsDescriptionDetail">description</string>
    <string name="contentDetail">content</string>
    <string name="urlImageDetail">url_image</string>
    <string name="urlDetail">url</string>
    <string name="authorDetail">author</string>
    <string name="No_Internet_Connection">NO internet connection</string>
    <string name="something_went_wrong">Something Went Wrong in the Server</string>
    <string name="category_string_fragment">category</string>
    <string name="login">Login</string>


</resources>
