<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.NewsDetailActivity"
    tools:showIn="@layout/activity_news_detail">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/newsDetail_ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/logo_image"
                    android:src="@drawable/ic_browser_blue" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightColor"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <TextView
                        android:id="@+id/newsTitle_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_title"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/newsName_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:hint="@string/nameDetail"
                            android:paddingTop="4dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="4dp"
                            android:textColor="@color/white" />


                        <TextView
                            android:id="@+id/publishedAt_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:paddingTop="4dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="4dp"
                            android:text="@string/_4th_may_18"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>

            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/browserDetailImageView"
                        android:layout_width="wrap_content"
                        android:contentDescription="@string/widget"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_widgets_blue" />

                    <TextView
                        android:id="@+id/censor_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/widget"
                        android:textColor="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/share"
                        android:id="@+id/shareDetailImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_share_white" />

                    <TextView
                        android:id="@+id/movieRating_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/share"
                        android:textColor="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ToggleButton
                        android:contentDescription="@string/favourites"
                        android:id="@+id/favouritesButton"
                        android:layout_width="29dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/favourites_button"
                        android:textOff=""
                        android:textOn="" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/favourites"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white" />


            <TextView
                android:id="@+id/news_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/newsDescription"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/news_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/white" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white" />


            <WebView
                android:id="@+id/detailNewsWebView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:text="@string/detail_web_view" />


        </LinearLayout>


    </ScrollView>

</FrameLayout>