<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ProgressBar
        android:id="@+id/register_ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:paddingBottom="50dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_marginBottom="100dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gis_logo_img"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_image"
                    android:src="@drawable/ic_browser_blue"
                    />

                <TextView
                    android:id="@+id/gis_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/newsXlogo"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sign_in_text_size"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/username_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:fontFamily="roboto"
                    android:hint="@string/username_hint"
                    android:padding="@dimen/standard_margin"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/secondaryLight"
                    android:textSize="@dimen/input_size"
                    app:backgroundTint="@color/secondaryLight" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password_hint"
                    android:padding="@dimen/standard_margin"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/secondaryLight"
                    android:textSize="@dimen/input_size"
                    app:backgroundTint="@color/secondaryLight" />


                <TextView
                    android:id="@+id/alreadyRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:text="@string/already_registered"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/registerFirebase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registerButton" />


            </LinearLayout>


        </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/scrollView2"
            ads:layout_constraintVertical_bias="1.0"></com.google.android.gms.ads.AdView>


    </android.support.constraint.ConstraintLayout>




















</FrameLayout>