<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/gis_logo_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_browser_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gis_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gis_logo_img"
        android:fontFamily="@font/roboto_thin"
        android:text="NewsX"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_in_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gis_logo_img" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/username_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gis_txt"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:fontFamily="roboto"
        android:hint="@string/username_hint"
        android:padding="@dimen/standard_margin"
        android:textColor="@android:color/white"
        android:textColorHint="@color/secondaryLight"
        android:textSize="@dimen/input_size"
        app:backgroundTint="@color/secondaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gis_txt" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_txt"
        android:layout_marginBottom="68dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_hint"
        android:padding="@dimen/standard_margin"
        android:textColor="@android:color/white"
        android:textColorHint="@color/secondaryLight"
        android:textSize="@dimen/input_size"
        app:backgroundTint="@color/secondaryLight"
        app:layout_constraintBottom_toTopOf="@+id/loginFirebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        android:text="Forgot Password?"
        android:layout_marginBottom="3dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginFirebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/registerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        android:text="Register?"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toEndOf="@+id/forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/password_Login" />


    <Button
        android:id="@+id/loginFirebase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/registerFirebase"
        ads:layout_constraintVertical_bias="1.0"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>